# mandelbrot

./: .env.example  .firebaserc  .gitignore  AGENTS.md  ANTIALIASING_PLAN.md  COMPLETE_NOTES_pade_to_mobius_cplus.md  CORRECTIF_PADE_MOBIUS_CPLUS.md  Cargo.toml  FEIGENBAUM_RENORMALIZATION_CERTIFIED_PROOF.md  JET_BLA_FINDINGS.md  MANDELBROT_CERTIFIED_RUNTIME_MASTER_PLAN.md  MANDELBROT_DIRECTIONS_MATHEMATIQUES_EXPLORATOIRES.md  MANDELBROT_JET_IMPLEMENTATION.md  MANDELBROT_MOBIUS_CPLUS_IMPLEMENTATION.md  MANDELBROT_PADE_IMPLEMENTATION.md  MANDELBROT_UNIFIED_TABLE_IMPLEMENTATION.md  MOBIUS_CPLUS_IMPLEMENTATION.md  MOBIUS_DISK_RUNTIME_IMPLEMENTATION_PLAN.md  NONAUTONOMOUS_PADE_RUNTIME.md  PADE_RUNTIME_REVISED_PLAN.md  README.md  cors.json  firestore.rules  index.html  manifest.webmanifest  opencode.json  package-lock.json  package.json  playwright.config.ts  storage.rules  sw.js  tsconfig.app.json  vite.config.ts
.cargo/: config.toml
canvas/: Animation Dense.html  Animation Panel.html  Animation Panel3.html  Logo.html  Mobile Navigation (standalone).html  Navigation Dense.html  Navigation Panel.html  Palettes Dense.html  Palettes Panel (standalone).html  Presets Dense.html  Presets Panel.html
docs/: _virtual_referenceWorker-CtsKJ7mB.js  index-6wwgyIe9.js  index-A0XtzIfT.css  index-AADd6DPO.css  index-B7FfgT0n.js  index-B8p_3l1i.js  index-B9wg2ccy.js  index-B9xdHnph.css  index-BB8zPGac.js  index-BBK5k6-s.css  index-BCOfH_ph.js  index-BCaGYSFQ.css  index-BD9PnjlX.css  index-BDakm2t2.js  index-BN1VGkgV.js  index-BSfoQrdz.js  index-BTD-tWZ5.js  index-BUAFsEjU.css  index-BW0-eoRs.js  index-B_MMfwUO.css  index-BbOBOdQ3.css  index-BdUJnaKq.js  index-Bhi9fG3L.css  index-Bkde8S4f.css  index-Bmk5Ytvp.css  index-BvIaGqTG.js  index-BvbhFbqB.css  index-BwChPfto.js  index-BzheJf1o.css  index-C-4Hnk3O.js  index-C2jJSfGA.js  index-C2teW1q0.css  index-C4toO1Xv.css  index-C7hPZRvS.css  index-C7ybIflL.css  index-C8vXTT2b.css  index-C9Q6fbI8.css  index-CAAzelGd.css  index-CDAwFzIg.css  index-CFSKE2vW.js  (+97 more)
experiments/: mandelbrot-julia-volume-3d.html
functions/: index.js  package-lock.json  package.json  personalLibraryCore.js
lean-proofs/: LeanProofs.lean  PROOF_STATUS.md  README.md  lake-manifest.json  lakefile.toml
mandelbrot/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
presentation/: index.md  mathematiques.md  optimisation-draft.md  optimisation.md  shader.mermaid  tables-approximation.md  webGPU.mermaid
reference_calculus/: Cargo.toml  LICENSE_MIT  README.md  package-lock.json
reference_calculus/benchmarks/: dynamic-validity-census.json  unified-cold-build-baseline.json
reference_calculus/src/: feigenbaum.rs  gates.rs  jet.rs  lib.rs  matrix_c1.rs  mobius.rs  unified.rs  validity.rs
src/: AnimationConfig.ts  App.vue  ColorStop.ts  CursorCoordinate.ts  Engine.ts  Mandelbrot.ts  Palette.ts  TextureMapping.ts  WebcamTexture.ts  animationPresetStore.ts  authService.ts  catalogIdentity.ts  catalogPermissions.ts  dense.css  effectFieldConfig.ts  firebaseConfig.ts  (+35 more)
(+797 files in other folders)
