[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Collombet Guillaume <guillaume.collombet@orange.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
wgpu = "26.0.1"
pollster = "0.4.0"
bytemuck = "1.23.2"
web-sys =  { version = "0.3", features = ["Document", "Window", "Element"] }
wasm-bindgen-futures = "0.4.51"
console_log = "1.0.0"
log = "0.4.27"
anyhow = "1.0.99"
env_logger = "0.11.8"
winit = "0.30.12"
malachite-float = "0.6.1"
astro-float =  "0.9"
getrandom = { version = "0.2", features = ["js"] }
malachite-base = "0.6.1"
js-sys = "0.3.78"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
