[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Collombet Guillaume <guillaume.collombet@orange.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
alloc = []

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
log = "0.4.27"
malachite-float = "0.6.1"
astro-float =  { version = "0.9"  }
dashu-float = "0.4.x"
getrandom = { version = "0.2", features = ["js"] }
malachite-base = "0.6.1"
spin = "0.9"
js-sys = "0.3.78"
web-sys = { version = "0.3.78", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
